--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -13,20 +13,21 @@
   "dependencies": {
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
-    "strapi-utils": "3.6.8",
-    "strapi-plugin-content-type-builder": "3.6.8",
+    "strapi-connector-mongoose": "3.6.8",
     "strapi-plugin-content-manager": "3.6.8",
-    "strapi-plugin-users-permissions": "3.6.8",
+    "strapi-plugin-content-type-builder": "3.6.8",
     "strapi-plugin-email": "3.6.8",
-    "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-i18n": "3.6.8",
-    "strapi-connector-mongoose": "3.6.8"
+    "strapi-plugin-upload": "3.6.8",
+    "strapi-plugin-users-permissions": "3.6.8",
+    "strapi-provider-upload-aws-s3": "^3.6.8",
+    "strapi-utils": "3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "2440c5d6-459a-45b0-901a-33660cf66a78",
+    "uuid": "fc0f9dbb-3639-4c1c-9752-8622a509a0d5",
     "template": "https://github.com/strapi/strapi-template-ecommerce"
   },
   "engines": {
