--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,9 +13,11 @@
     "jwt-decode": "^3.1.2",
     "next": "12.0.4",
     "next-router": "^1.3.6",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-toastify": "^8.1.0",
+    "sass": "^1.43.5",
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
