--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ryanar/react-auth-provider": "^0.3.3",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
@@ -15,6 +16,7 @@
     "next-router": "^1.3.6",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
+    "react-auto-context": "^0.0.9",
     "react-dom": "17.0.2",
     "react-toastify": "^8.1.0",
     "sass": "^1.43.5",
