--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/_app.js"  ],
+, "pages/_app.js", "pages/components/Account/ChangeNameForm/ChangeNameForm.js"  ],
   "exclude": [
     "node_modules"
   ]
