--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "next": "12.0.4",
     "next-router": "^1.3.6",
     "node-sass": "^6.0.1",
