--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "next": "12.0.4",
     "next-router": "^1.3.6",
     "node-sass": "^6.0.1",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-auto-context": "^0.0.9",
     "react-dom": "17.0.2",
