--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/_app.js", "pages/components/Account/ChangeNameForm/ChangeNameForm.js", "pages/components/Account/ChangeEmailForm/ChangesEmailForm.js", "pages/components/Account/ChangePasswordForm/ChangePasswordForm.ja", "pages/account.js", "pages/components/Account/AdressForm/AdressFormja", "pages/components/Account/ListAddress/ListAddress.js", "pages/components/Menu/index.js", "pages/index.js", "pages/games/[platforms].js", "pages/components/Pagination/Pagination.js", "pages/[game].ja", "pages/components/Games/TabsGame/TabsGame.js", "pages/components/Games/InfoGame/InfoGame.js", "api/Favorite.tsx", "api/Cart.js" ] ,
+, "pages/_app.js", "pages/components/Account/ChangeNameForm/ChangeNameForm.js", "pages/components/Account/ChangeEmailForm/ChangesEmailForm.js", "pages/components/Account/ChangePasswordForm/ChangePasswordForm.ja", "pages/account.js", "pages/components/Account/AdressForm/AdressFormja", "pages/components/Account/ListAddress/ListAddress.js", "pages/components/Menu/index.js", "pages/index.js", "pages/games/[platforms].js", "pages/components/Pagination/Pagination.js", "pages/[game].ja", "pages/components/Games/TabsGame/TabsGame.js", "pages/components/Games/InfoGame/InfoGame.js", "api/Favorite.tsx", "api/Cart.js", "pages/components/Cart/AddressShipping/AddressShipping.js", "pages/components/Cart/SummaryCart/SummaryCart.js", "pages/cart.js" ] ,
   "exclude": [
     "node_modules"
   ]
