--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -21,7 +21,8 @@
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
     "strapi-provider-upload-aws-s3": "^3.6.8",
-    "strapi-utils": "3.6.8"
+    "strapi-utils": "3.6.8",
+    "stripe": "^8.195.0"
   },
   "author": {
     "name": "A Strapi developer"
