--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@ryanar/react-auth-provider": "^0.3.3",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "next-router": "^1.3.6",
     "node-sass": "^6.0.1",
@@ -20,11 +23,14 @@
     "react": "17.0.2",
     "react-auto-context": "^0.0.9",
     "react-dom": "17.0.2",
+    "react-player": "^2.9.0",
+    "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "sass": "^1.43.5",
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "slick-carousel": "^1.8.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
