--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@ryanar/react-auth-provider": "^0.3.3",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
